force-app/main/default/objects/Placement__c/fields/TPB_lk__c.field-meta.xml
<CustomField>
    <fullName>TPB_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Third Party Broker</inlineHelpText>
    <label>TPB</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Placements (TPB)</relationshipLabel>
    <relationshipName>PlacementsAsTPB</relationshipName>
    <type>Lookup</type>
</CustomField>