force-app/main/default/objects/Placement__c/fields/TPBAmt__c.field-meta.xml
<CustomField>
    <fullName>TPBAmt__c</fullName>
    <label>TPB Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>