force-app/main/default/objects/Placement__c/fields/TPBofTotalBrkg__c.field-meta.xml
<CustomField>
    <fullName>TPBofTotalBrkg__c</fullName>
    <label>TPB(%) of Total Brkg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>