force-app/main/default/objects/Placement__c/fields/TransactionSeq__c.field-meta.xml
<CustomField>
    <fullName>TransactionSeq__c</fullName>
    <label>Transaction Seq</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>