force-app/main/default/objects/Placement__c/fields/TSILOL__c.field-meta.xml
<CustomField>
    <fullName>TSILOL__c</fullName>
    <label>(M)TSI/LOL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>