force-app/main/default/objects/Placement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Facultative Reinsurance</fullName>
            </value>
            <value>
                <fullName>Casulty Facultative Reinsurance</fullName>
            </value>
            <value>
                <fullName>Facultative Proportional Reinsurance</fullName>
            </value>
            <value>
                <fullName>Construction and Engineering Facultative Reinsurance</fullName>
            </value>
            <value>
                <fullName>Construction and Engineering Facility Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>