force-app/main/default/objects/Placement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionType__c</columns>
    <columns>CedantName_lk__c</columns>
    <columns>OriginalInsured_lk__c</columns>
    <columns>Status__c</columns>
    <columns>Insurer_lk__c</columns>
    <columns>InceptionDate__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>AccountingDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>